--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -20,6 +20,9 @@ jobs:
     - name: Restore dependencies
       working-directory: Backend/Bank/Bank
       run: dotnet restore
+    - name: Restore NuGet packages
+      working-directory: Backend/Bank
+      run: dotnet restore
     - name: Build
       working-directory: Backend/Bank
       run: dotnet build --no-restore
