--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -30,4 +30,4 @@ jobs:
       working-directory: Backend/Bank/BankTest
       run: dotnet test --no-build --verbosity normal
     - name: Generate code coverage report
-      run: dotnet test --collect:"XPlat Code Coverage"
+      run: dotnet test Backend/Bank/BankTest --collect:"XPlat Code Coverage"
