--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -29,13 +29,13 @@ jobs:
     - name: Test
       working-directory: Backend/Bank/BankTest
       run: dotnet test --no-build --verbosity normal
+    - name: Install ReportGenerator
+      run: dotnet tool install -g dotnet-reportgenerator-globaltool
     - name: Run tests and generate code coverage
       run: | 
         dotnet test Backend/Bank/BankTest/ --logger "trx;LogFileName=testresults.trx" --collect:"XPlat Code Coverage"
         reportgenerator "-reports:Backend/Bank/BankTest/TestResults/coverage.cobertura.xml" "-targetdir:coveragereport" "-reporttypes:HtmlInline;HtmlChart"
         working-directory: Backend/Bank/BankTest/
-    - name: Upload code coverage report
-      uses: actions/upload-artifact@v2
-      with:
-        name: code-coverage
-        path: Backend/Bank/BankTest/TestResults/*.json
+    - name: Publish coverage report
+      run: reportgenerator "-reports:Backend/Bank/BankTest/TestResults/coverage.cobertura.xml" "-targetdir:coveragereport" "-reporttypes:HtmlInline;HtmlChart"
+      working-directory: Backend/Bank/BankTest/
