--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -31,11 +31,9 @@ jobs:
       run: dotnet test --no-build --verbosity normal
     - name: Install ReportGenerator
       run: dotnet tool install -g dotnet-reportgenerator-globaltool
-    - name: Run tests and generate code coverage
-      run: | 
-        dotnet test Backend/Bank/BankTest/ --logger "trx;LogFileName=testresults.trx" --collect:"XPlat Code Coverage"
-        run: reportgenerator -reports:/home/runner/work/BankApp/BankApp/Backend/Bank/BankTest/TestResults/0faea531-2f46-4846-b9cd-1152377227d7/coverage.cobertura.xml -targetdir:coveragereport -reporttypes:HtmlInline;HtmlChart
-        working-directory: Backend/Bank/BankTest/
+    - name: Generate code coverage report
+      run: dotnet tool run reportgenerator -reports:/home/runner/work/BankApp/BankApp/Backend/Bank/BankTest/TestResults/0faea531-2f46-4846-b9cd-1152377227d7/coverage.cobertura.xml -targetdir:coveragereport -reporttypes:HtmlInline;HtmlChart 
+      working-directory: Backend/Bank/BankTest/
     - name: Publish coverage report
       run: reportgenerator "-reports:Backend/Bank/BankTest/TestResults/coverage.cobertura.xml" "-targetdir:coveragereport" "-reporttypes:HtmlInline;HtmlChart"
       working-directory: Backend/Bank/BankTest/
