--- a/Backend/Bank/Bank/Dockerfile
+++ b/Backend/Bank/Bank/Dockerfile
@@ -22,4 +22,6 @@ COPY --from=publish /app/publish .
 
 COPY Bank/email.txt /app/email.txt
 
+COPY Bank/kurz.txt /app/kurz.txt
+
 ENTRYPOINT ["dotnet", "Bank.dll"]
